classDiagram
    %% PawPal+ Initial Draft UML
    %% Captured before implementing algorithmic methods.
    %% Updated in Phase 6 → see uml_final.mmd

    class Owner {
        +str name
        +list~Pet~ pets
        +add_pet(pet) None
        +get_all_tasks() list~Task~
        +get_pet(name) Pet
        +save() None
        +load() Owner
    }

    class Pet {
        +str name
        +str species
        +str breed
        +float age_years
        +list~Task~ tasks
        +add_task(task) None
        +get_tasks() list~Task~
        +pending_tasks() list~Task~
    }

    class Task {
        +str name
        +str time
        +str priority
        +str frequency
        +str pet_name
        +int duration_minutes
        +bool completed
        +date due_date
        +str notes
        +mark_complete() None
        +next_occurrence() Task
    }

    class Scheduler {
        +Owner owner
        +todays_schedule(date) list~Task~
    }

    Owner "1" --> "0..*" Pet : manages
    Pet "1" --> "0..*" Task : owns
    Scheduler --> Owner : reads from
